# learn-ros2

./: .gitignore  README.md
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/install/my_cpp_pkg/share/ament_index/resource_index/parent_prefix_path/: my_cpp_pkg
ros2_ws/install/my_cpp_pkg/share/my_cpp_pkg/: local_setup.sh  package.sh
ros2_ws/install/my_python_pkg/share/my_python_pkg/: package.dsv  package.ps1  package.sh  package.xml
ros2_ws/log/: latest_build  latest_list
ros2_ws/src/my_cpp_pkg/: CMakeLists.txt  package.xml
ros2_ws/src/my_cpp_pkg/src/: add_two_ints_client.cpp  add_two_ints_client_no_oop.cpp  add_two_ints_server.cpp  my_first_cpp_node.cpp  robot_news_station.cpp  smartphone.cpp
ros2_ws/src/my_python_pkg/: package.xml  setup.cfg  setup.py
ros2_ws/src/my_python_pkg/my_python_pkg/: add_two_ints_client.py  add_two_ints_client_no_oop.py  add_two_ints_server.py  my_first_python_node.py  number_counter.py  number_publisher.py  robot_news_station.py  smartphone.py
